--- a/index.html
+++ b/index.html
@@ -2,16 +2,23 @@
 <html>
     <script src="https://aframe.io/releases/1.0.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script> <!-- in order to load .gltf -->
     <body style="margin : 0px; overflow: hidden;">
         <a-scene embedded arjs>
-        <a-marker preset="hiro">
-            <a-entity
-            position='1 0 0'
-            scale='0.5 0.5 0.5''
-            gltf-model='https://kristenphan.github.io/assets/trump-3d/scene.gltf'
-            ></a-entity>
-        </a-marker>
-        <a-entity camera></a-entity>
+            <a-assets>
+                <a-asset-item 
+                    id="trump" 
+                    response-type="arraybuffer"
+                    src="https://kristenphan.github.io/assets/models/trump-running/scene.glb"
+                </a-asset-item>
+            </a-assets>
+            <a-marker preset="hiro">
+                <a-entity
+                gltf-model="#bird"
+                scale="0.5 0.5 0.5"
+                ></a-entity>
+            </a-marker>
+            <a-entity camera></a-entity>
         </a-scene>
     </body>
 </html>
