--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </a-assets>
             <a-marker preset="hiro">
                 <a-entity
-                gltf-model="#bird"
+                gltf-model="#trump"
                 scale="0.5 0.5 0.5"
                 ></a-entity>
             </a-marker>
