--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
                 <a-asset-item 
                     id="trump" 
                     response-type="arraybuffer"
-                    src="https://kristenphan.github.io/assets/models/trump-running/scene.glb"
+                    src="https://kristenphan.github.io/assets/models/trump-running/scene.glb">
                 </a-asset-item>
             </a-assets>
             <a-marker preset="hiro">
                 <a-entity
                 gltf-model="#trump"
-                scale="0.5 0.5 0.5"
-                ></a-entity>
+                scale="0.5 0.5 0.5">
+                </a-entity>
             </a-marker>
             <a-entity camera></a-entity>
         </a-scene>
