--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -1,24 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <script src="https://aframe.io/releases/1.0.0/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script> <!-- in order to load .gltf -->
-    <body style="margin : 0px; overflow: hidden;">
-        <a-scene embedded arjs>
-            <a-assets>
-                <a-asset-item 
-                    id="trump" 
-                    response-type="arraybuffer"
-                    src="https://github.com/kristenphan/trump-hiro/blob/main/assets/models/trump/scene.glb">
-                </a-asset-item>
-            </a-assets>
-            <a-marker preset="hiro">
-                <a-entity
-                gltf-model="#trump"
-                scale="0.005 0.005 0.005">
-                </a-entity>
-            </a-marker>
-            <a-entity camera></a-entity>
-        </a-scene>
-    </body>
+<script src="https://aframe.io/releases/1.0.0/aframe.min.js"></script>
+<!-- we import arjs version without NFT but with marker + location based support -->
+<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+<body style="margin : 0px; overflow: hidden;">
+    <a-scene embedded arjs>
+        <a-marker preset="hiro">
+            <!-- we use cors proxy to avoid cross-origin problems ATTENTION! you need to set up your server -->
+            <a-entity position="0 0 0"
+                      scale="0.05 0.05 0.05"
+                      gltf-model="https://github.com/kristenphan/ar/blob/main/assets/models/trump/scene.glb">
+            </a-entity>
+        </a-marker>
+        <a-entity camera></a-entity>
+    </a-scene>
+</body>
 </html>
