--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -9,7 +9,7 @@
             <!-- we use cors proxy to avoid cross-origin problems ATTENTION! you need to set up your server -->
             <a-entity position="0 0 0"
                       scale="0.05 0.05 0.05"
-                      gltf-model="https://github.com/kristenphan/ar/blob/main/assets/models/trump/scene.glb">
+                      gltf-model="https://github.com/kristenphan/ar/blob/main/assets/models/trump/scene.gltf">
             </a-entity>
         </a-marker>
         <a-entity camera></a-entity>
