--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -8,7 +8,7 @@
         <a-marker preset="hiro">
             <a-entity position="0 0 0"
                       scale="0.05 0.05 0.05"
-                      gltf-model="https://github.com/kristenphan/ar/blob/main/make-lsrun-great-again/https://github.com/kristenphan/kristenphan.github.io/blob/main/assets/models/trump-running/scene.gltf"></a-entity>
+                      gltf-model="https://github.com/kristenphan/ar/blob/main/assets/models/trump/scene.gltf"></a-entity>
         </a-marker>
         <a-entity camera></a-entity>
     </a-scene>
