--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -3,12 +3,16 @@
 <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
 <!-- we import arjs version without NFT but with marker + location based support -->
 <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+<!--aframe-extra for a-frame animation-mixer-->
+<script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
 <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
         <a-marker preset="hiro">
             <a-entity position="0 0 0"
                       scale="1 1 1"
-                      gltf-model="https://kristenphan.github.io/assets/models/trump/scene.gltf"></a-entity>
+                      gltf-model="https://kristenphan.github.io/assets/models/trump/scene.gltf"
+                      animation-mixer>
+            </a-entity>
         </a-marker>
         <a-entity camera></a-entity>
     </a-scene>
