--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -10,7 +10,7 @@
         <a-marker preset="hiro">
             <a-entity position="0 0 0"
                       scale="1 1 1"
-                      gltf-model="https://kristenphan.github.io/assets/models/trump/scene.gltf"
+                      gltf-model="https://kristenphan.github.io/assets/models/trump/scene.glb"
                       animation-mixer>
             </a-entity>
         </a-marker>
