changed to gltf

--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -10,7 +10,7 @@
         <a-marker preset="hiro">
             <a-entity position="0 0 0"
                       scale="0.6 0.6 0.6"
-                      gltf-model="https://kristenphan.github.io/assets/models/trump/scene.glb"
+                      gltf-model="https://kristenphan.github.io/assets/models/trump/scene.gltf"
                       animation-mixer>
             </a-entity>
         </a-marker>
