--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -13,7 +13,7 @@
                       gltf-model="https://kristenphan.github.io/assets/models/trump/scene.gltf"
                       animation-mixer>
             </a-entity>
-            <a-entity text="value: Hello World;"></a-entity>
+            <a-entity text="value: Hello World; color: gold"></a-entity>
         </a-marker>
         <a-entity camera></a-entity>
     </a-scene>
