--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -15,7 +15,8 @@
             </a-entity>
             <a-entity 
                       text="value: Hello World; color: gold"
-                      position="0 10 0">
+                      position="0 25 0"
+                      scale="2 2 2">
             </a-entity>
         </a-marker>
         <a-entity camera></a-entity>
