--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -15,8 +15,8 @@
             </a-entity>
             <a-entity 
                       text="value: Hello World; color: gold"
-                      position="0 10 0"
-                      <!--scale="5 5 5"-->>
+                      position="0 0 0"
+                      scale="1 1 1"
             </a-entity>
         </a-marker>
         <a-entity camera></a-entity>
