--- a/test/index.html
+++ b/test/index.html
@@ -8,7 +8,7 @@
 <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
         <a-marker preset="hiro">
-            <a-plane color="#a100fe" height="0.01" width="0.01"></a-plane>
+            <a-plane color="#a100fe" height="0.1" width="0.1" position="0 0 0"></a-plane>
         </a-marker>
         <a-entity camera></a-entity>
     </a-scene>
