--- a/test/index.html
+++ b/test/index.html
@@ -8,9 +8,10 @@
 <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
         <a-marker preset="hiro">
-            <a-plane color="#a100fe" height="0.5" width="0.5" position="0 1 0"></a-plane>
+            <a-plane color="gold" height="0.5" width="0.5" position="0 1 0"></a-plane>
         </a-marker>
         <a-entity camera></a-entity>
     </a-scene>
 </body>
 </html>
+<!--acn purple: #a100fe-->
