--- a/test/index.html
+++ b/test/index.html
@@ -5,13 +5,23 @@
 <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 <!--aframe-extra for a-frame animation-mixer-->
 <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
+<!--aframe-look-at-component to tell an entity to face towards another entity or position-->
+<script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
 <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
         <a-marker preset="hiro">
-            <a-plane color="gold" height="0.5" width="0.5" position="0 1 0"></a-plane>
+            <!--<a-plane color="#a100fe" height="0.5" width="0.5" position="0 1 0"></a-plane>-->
+            <a-entity 
+                geometry="primitive: plane"
+                color="a100fe"
+                height="0.5"
+                width="0.5"
+                position="0 1 0"
+                look-at="[camera]">
+            </a-entity>
         </a-marker>
         <a-entity camera></a-entity>
     </a-scene>
 </body>
 </html>
-<!--acn purple: #a100fe-->
+<!--acn purple: "#a100fe" or "gold"-->
