--- a/test/index.html
+++ b/test/index.html
@@ -13,7 +13,7 @@
             <!--<a-plane color="#a100fe" height="0.5" width="0.5" position="0 1 0"></a-plane>-->
             <a-entity 
                 geometry="primitive: plane"
-                color="a100fe"
+                color="#a100fe"
                 height="0.5"
                 width="0.5"
                 position="0 1 0"
