--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -14,10 +14,18 @@
                       animation-mixer>
             </a-entity>
             <a-entity 
+                geometry="primitive: plane"
+                material="color: #a100fe"
+                height="0.5"
+                width="0.5"
+                position="0 1 0"
+                look-at="[camera]">
+            </a-entity>
+            <!--<a-entity 
                       text="value: Hello World; color: gold"
                       position="0 2 0"
                       scale="1 1 1"
-            </a-entity>
+            </a-entity>-->
         </a-marker>
         <a-entity camera></a-entity>
     </a-scene>
