--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -5,6 +5,8 @@
 <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 <!--aframe-extra for a-frame animation-mixer-->
 <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
+<!--aframe-look-at-component to tell an entity to face towards another entity or position-->
+<script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
 <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
         <a-marker preset="hiro">
