--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -17,7 +17,7 @@
             </a-entity>
             <a-entity 
                 geometry="primitive: plane"
-                material="color: #a100fe"
+                material="color: gold"
                 height="0.5"
                 width="0.5"
                 position="1 1 1"
