--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -17,10 +17,10 @@
             </a-entity>
             <a-entity 
                 geometry="primitive: plane"
-                material="color: gold"
+                material="color: #a100fe"
                 height="0.5"
                 width="0.5"
-                position="1 1 1"
+                position="0 2 0"
                 look-at="[camera]">
             </a-entity>
             <!--<a-entity 
