--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -16,11 +16,10 @@
                       animation-mixer>
             </a-entity>
             <a-entity 
-                geometry="primitive: plane"
+                geometry="primitive: plane; height: auto; width: auto"
                 material="color: #a100fe"
-                height="0.5"
-                width="0.5"
                 position="0 2 0"
+                text="#MakeLSRunGreatAgain!"
                 look-at="[camera]">
             </a-entity>
             <!--<a-entity 
