--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -17,7 +17,7 @@
             </a-entity>
             <a-entity 
                 geometry="primitive: plane; height: auto; width: auto"
-                material="color: #a100fe"
+                material="color: gold"
                 position="0 2 0"
                 text="#MakeLSRunGreatAgain!"
                 look-at="[camera]">
