--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -19,7 +19,7 @@
                 geometry="primitive: plane; height: auto; width: auto"
                 material="color: gold"
                 position="0 2 0"
-                text="#MakeLSRunGreatAgain!"
+                text="width: 0.2; value: #MakeLSRunGreatAgain!"
                 look-at="[camera]">
             </a-entity>
             <!--<a-entity 
