--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -17,9 +17,9 @@
             </a-entity>
             <a-entity 
                 geometry="primitive: plane; height: auto; width: auto"
-                material="color: gold"
+                material="color: #a100fe"
                 position="0 2 0"
-                text="width: 0.2; value: #MakeLSRunGreatAgain!"
+                text="value: #MakeLSRunGreatAgain!; width: 2; color: black"
                 look-at="[camera]">
             </a-entity>
             <!--<a-entity 
