position text closer; gold

--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -17,8 +17,8 @@
             </a-entity>
             <a-entity 
                 geometry="primitive: plane; height: auto; width: auto"
-                material="color: #a100fe"
-                position="0 2 0"
+                material="color: gold"
+                position="0 4 0"
                 text="value: #MakeLSRunGreatAgain!; width: 2; color: black"
                 look-at="[camera]">
             </a-entity>
