no look-at to check stability; gold

--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -17,10 +17,10 @@
             </a-entity>
             <a-entity 
                 geometry="primitive: plane; height: auto; width: auto"
-                material="color: #a100fe"
-                position="0 3 4"
-                text="value: #MakeLSRunGreatAgain!; width: 2; color: black"
-                look-at="[camera]">
+                material="color: gold"
+                position="0 3 1"
+                text="value: #MakeLSRunGreatAgain!; width: 1; color: black">
+                <!--look-at="[camera]"-->
             </a-entity>
             <!--<a-entity 
                       text="value: Hello World; color: gold"
