--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -17,16 +17,16 @@
             </a-entity>
             <a-entity 
                 geometry="primitive: plane; height: auto; width: auto"
-                material="color: gold"
-                position="0 3 1"
+                material="color: #a100fe"
+                position="0 2 0"
                 text="value: #MakeLSRunGreatAgain!; width: 1; color: black">
                 <!--look-at="[camera]"-->
             </a-entity>
-            <!--<a-entity 
+            <a-entity 
                       text="value: Hello World; color: gold"
-                      position="0 2 0"
+                      position="0 3 0"
                       scale="1 1 1"
-            </a-entity>-->
+            </a-entity>
         </a-marker>
         <a-entity camera></a-entity>
     </a-scene>
