--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -17,9 +17,10 @@
             </a-entity>
             <a-entity 
                 geometry="primitive: plane; height: auto; width: auto"
-                material="color: #a100fe"
+                material="color: gold"
                 position="0 2 0"
-                text="value: #MakeLSRunGreatAgain!; width: 1; color: black">
+                <a-text value="Make LS Run Great Again\nWhat: []\nWhen: []\nWhere: []"></a-text>>
+                <!--text="value: #MakeLSRunGreatAgain!; width: 1; color: black"-->
                 <!--look-at="[camera]"-->
             </a-entity>
             <a-entity 
