gold; black text

--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -19,7 +19,7 @@
                 geometry="primitive: plane; height: auto; width: auto"
                 material="color: gold"
                 position="0 2 0"
-                <a-text value="Make LS Run Great Again\nWhat: []\nWhen: []\nWhere: []"></a-text>>
+                <a-text value="Make LS Run Great Again\nWhat: []\nWhen: []\nWhere: []" color="black"></a-text>>
                 <!--text="value: #MakeLSRunGreatAgain!; width: 1; color: black"-->
                 <!--look-at="[camera]"-->
             </a-entity>
