--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -17,7 +17,7 @@
             </a-entity>
             <a-entity 
                 geometry="primitive: plane; height: auto; width: auto"
-                material="color: gold"
+                material="color: #a100fe"
                 position="0 2 0"
                 <a-text value="Make LS Run Great Again\nWhat: []\nWhen: []\nWhere: []" color="black"></a-text>>
                 <!--text="value: #MakeLSRunGreatAgain!; width: 1; color: black"-->
