--- a/test/index.html
+++ b/test/index.html
@@ -11,13 +11,23 @@
     <a-scene embedded arjs>
         <a-marker preset="hiro">
             <!--<a-plane color="#a100fe" height="0.5" width="0.5" position="0 1 0"></a-plane>-->
-            <a-entity 
+            <!--<a-entity 
                 geometry="primitive: plane"
                 material="color: #a100fe"
                 height="0.5"
                 width="0.5"
                 position="0 1 0"
                 look-at="[camera]">
+            </a-entity>-->
+            <a-entity
+                position="0 2 0"
+                geometry="primitive: plane; width: 8; height: auto"
+                material="color: gold"
+                text=
+                    "color: black; 
+                    align: center; 
+                    font: https://cdn.aframe.io/fonts/DejaVu-sdf.fnt;
+                    value: a-plane align:center (anchor:align) DejaVu width 8 1234567890123456789012345678901234567890">
             </a-entity>
         </a-marker>
         <a-entity camera></a-entity>
