test/index.html. added text without background plane

--- a/test/index.html
+++ b/test/index.html
@@ -29,6 +29,15 @@
                     font: https://cdn.aframe.io/fonts/DejaVu-sdf.fnt;
                     value: a-plane align:center (anchor:align) DejaVu width 8 1234567890123456789012345678901234567890">
             </a-entity>
+            <a-entity
+                position="0 5 -4"
+                text=
+                    "color: white; 
+                    align: center; 
+                    width: 5; 
+                    font: kelsonsans;
+                    value: align='center' (default anchor) KelsonSans 123456789012345678901234567890123456789012345678901234567890"
+      ></a-entity>
         </a-marker>
         <a-entity camera></a-entity>
     </a-scene>
