--- a/test/index.html
+++ b/test/index.html
@@ -36,8 +36,8 @@
                     align: center; 
                     width: 5; 
                     font: kelsonsans;
-                    value: align='center' (default anchor) KelsonSans 123456789012345678901234567890123456789012345678901234567890"
-      ></a-entity>
+                    value: align='center' (default anchor) KelsonSans 123456789012345678901234567890123456789012345678901234567890">
+            </a-entity>
         </a-marker>
         <a-entity camera></a-entity>
     </a-scene>
