gold; centered text no plane

--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -15,18 +15,21 @@
                       gltf-model="https://kristenphan.github.io/assets/models/trump/scene.gltf"
                       animation-mixer>
             </a-entity>
-            <a-entity 
+            <!--<a-entity 
                 geometry="primitive: plane; height: auto; width: auto"
                 material="color: #a100fe"
                 position="0 2 0"
                 <a-text value="Make LS Run Great Again\nWhat: []\nWhen: []\nWhere: []" color="black"></a-text>>
                 <!--text="value: #MakeLSRunGreatAgain!; width: 1; color: black"-->
-                <!--look-at="[camera]"-->
-            </a-entity>
-            <a-entity 
-                      text="value: Hello World; color: gold"
-                      position="0 3 0"
-                      scale="1 1 1"
+                <!--look-at="[camera]" </a-entity>-->
+            <a-entity
+                position="0 2 0"
+                text=
+                    "color: gold; 
+                    align: center; 
+                    width: 5; 
+                    font: kelsonsans;
+                    value: Make LS Run Great Again\nWhat: []\nWhen: []\nWhere: []">
             </a-entity>
         </a-marker>
         <a-entity camera></a-entity>
