purple text; at look-at for text without plane

--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -23,13 +23,14 @@
                 <!--text="value: #MakeLSRunGreatAgain!; width: 1; color: black"-->
                 <!--look-at="[camera]" </a-entity>-->
             <a-entity
-                position="0 2 0"
+                position="0 2.5 0"
                 text=
-                    "color: gold; 
+                    "color: #a100fe; 
                     align: center; 
-                    width: 5; 
+                    width: 2; 
                     font: kelsonsans;
-                    value: Make LS Run Great Again\nWhat: []\nWhen: []\nWhere: []">
+                    value: Make LS Run Great Again\nWhat: []\nWhen: []\nWhere: []"
+                look-at="[camera]">
             </a-entity>
         </a-marker>
         <a-entity camera></a-entity>
