gold; editted text value

--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -23,13 +23,13 @@
                 <!--text="value: #MakeLSRunGreatAgain!; width: 1; color: black"-->
                 <!--look-at="[camera]" </a-entity>-->
             <a-entity
-                position="0 2.5 0"
+                position="0 2 0"
                 text=
-                    "color: #a100fe; 
+                    "color: gold; 
                     align: center; 
                     width: 2; 
                     font: kelsonsans;
-                    value: Make LS Run Great Again\nWhat: []\nWhen: []\nWhere: []"
+                    value: !Make LS Run Great Again!\nWhat: Friday's run with LS peeps\nWhen: Fridays @ 12 PM \nWhere: Edge office"
                 look-at="[camera]">
             </a-entity>
         </a-marker>
