gold text, added 2nd text entity

--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -28,8 +28,18 @@
                     "color: gold; 
                     align: center; 
                     width: 2; 
+                    font: https://cdn.aframe.io/fonts/Aileron-Semibold.fnt;
+                    value: !Make LS Run Great Again!"
+                look-at="[camera]">
+            </a-entity>
+            <a-entity
+                position="0 1.5 0"
+                text=
+                    "color: gold; 
+                    align: center; 
+                    width: 2; 
                     font: kelsonsans;
-                    value: !Make LS Run Great Again!\nWhat: Friday's run with LS peeps\nWhen: Fridays @ 12 PM \nWhere: Edge office"
+                    value: What: Weekly runs with LS peeps\nWhen: Fridays @ 12 PM \nWhere: Edge office"
                 look-at="[camera]">
             </a-entity>
         </a-marker>
