--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -29,7 +29,7 @@
                     "color: gold; 
                     align: center; 
                     width: 3; 
-                    font: https://kristenphan.github.io/assets/fonts/Oredo-Regular.ttf;
+                    font: kelsonsans;
                     value: !Make LS Run Great Again!"
                 look-at="[camera]">
             </a-entity>
@@ -50,3 +50,4 @@
 </html>
 <!-- acn purple = "#a100fe" or "gold"-->
 <!-- https://github.com/kristenphan/ar/blob/main/make-lsrun-great-again/index.html -->
+<!-- https://kristenphan.github.io/assets/fonts/Oredo-Regular.ttf -->
