gold text; added font

--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -26,17 +26,17 @@
             <a-entity
                 position="0 2 0"
                 text=
-                    "color: crimson; 
+                    "color: gold; 
                     align: center; 
                     width: 3; 
-                    font: https://kristenphan.github.io/assets/fonts/Oredo-Regular.ttf;
+                    font: https://kristenphan.github.io/assets/fonts/Oredo-Regular-msdf.json;
                     value: !Make LS Run Great Again!"
                 look-at="[camera]">
             </a-entity>
             <a-entity
-                position="0 1.8 0"
+                position="0 1.7 0"
                 text=
-                    "color: crimson; 
+                    "color: gold; 
                     align: center; 
                     width: 2; 
                     font: kelsonsans;
