gold text; higher text

--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -24,9 +24,9 @@
                 <!--text="value: #MakeLSRunGreatAgain!; width: 1; color: black"-->
                 <!--look-at="[camera]" </a-entity>-->
             <a-entity
-                position="0 2 0"
+                position="0 2.1 0"
                 text=
-                    "color: crimson; 
+                    "color: gold; 
                     align: center; 
                     width: 3; 
                     font: https://kristenphan.github.io/assets/fonts/Oredo-Regular-msdf.json;
@@ -35,9 +35,9 @@
                 look-at="[camera]">
             </a-entity>
             <a-entity
-                position="0 1.7 0"
+                position="0 1.8 0"
                 text=
-                    "color: crimson; 
+                    "color: gold; 
                     align: center; 
                     width: 2; 
                     font: kelsonsans;
