--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -26,18 +26,17 @@
             <a-entity
                 position="0 2.1 0"
                 text=
-                    "color: gold; 
+                    "color: crimson; 
                     align: center; 
                     width: 3; 
-                    font: https://kristenphan.github.io/assets/fonts/Oredo-Regular-msdf.json;
-                    fontImage: https://kristenphan.github.io/assets/fonts/OredoRegular.png
+                    font: exo2semibold
                     value: !Make LS Run Great Again!"
                 look-at="[camera]">
             </a-entity>
             <a-entity
                 position="0 1.8 0"
                 text=
-                    "color: gold; 
+                    "color: crimson; 
                     align: center; 
                     width: 2; 
                     font: kelsonsans;
