--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -29,7 +29,7 @@
                     "color: crimson; 
                     align: center; 
                     width: 3; 
-                    font: exo2semibold
+                    font: exo2semibold;
                     value: !Make LS Run Great Again!"
                 look-at="[camera]">
             </a-entity>
