--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -16,13 +16,6 @@
                       gltf-model="https://kristenphan.github.io/assets/models/trump/scene.gltf" 
                       animation-mixer>
             </a-entity>
-            <!--<a-entity 
-                geometry="primitive: plane; height: auto; width: auto"
-                material="color: #a100fe"
-                position="0 2 0"
-                <a-text value="Make LS Run Great Again\nWhat: []\nWhen: []\nWhere: []" color="black"></a-text>>
-                <!--text="value: #MakeLSRunGreatAgain!; width: 1; color: black"-->
-                <!--look-at="[camera]" </a-entity>-->
             <a-entity
                 position="0 2.1 0"
                 text=
@@ -40,7 +33,7 @@
                     align: center; 
                     width: 2; 
                     font: kelsonsans;
-                    value: What: Weekly runs with LS peeps\nWhen: Fridays @ 12 PM \nWhere: Edge office"
+                    value: What: Weekly 4 km runs\nWhen: Fridays @ 12 PM \nWhere: Edge office"
                 look-at="[camera]">
             </a-entity>
         </a-marker>
