--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -19,7 +19,7 @@
             <a-entity
                 position="0 2.1 0"
                 text=
-                    "color: crimson; 
+                    "color: gold; 
                     align: center; 
                     width: 3; 
                     font: exo2semibold;
@@ -29,7 +29,7 @@
             <a-entity
                 position="0 1.8 0"
                 text=
-                    "color: crimson; 
+                    "color: gold; 
                     align: center; 
                     width: 2; 
                     font: kelsonsans;
