--- a/cube2/index.html
+++ b/cube2/index.html
@@ -6,7 +6,7 @@
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <body style="margin : 0px; overflow: hidden;">
         <a-scene embedded arjs>
-            <!-- Defining marker type: Hirpo marker -->
+            <!-- Defining marker type: Hiro marker -->
             <a-marker preset="hiro">
                 <!-- Superimposing a yellow 3D box on the detected marker --> 
                 <a-box
