--- a/cube2/index.html
+++ b/cube2/index.html
@@ -10,8 +10,11 @@
             <a-marker preset="hiro">
                 <!-- Superimposing a yellow 3D box on the detected marker --> 
                 <a-box
-                    position="0 0.5 0"
-                    material="color: yellow;">
+                    position="0 2 0"
+                    material="color: yellow;"
+                    depth="0.5" 
+                    height="0.5" 
+                    width="0.5">
                 </a-box>
             </a-marker>
             <a-entity camera></a-entity>
