--- a/cube2/index.html
+++ b/cube2/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-    <!-- Loading A-Frame library for modeling AR content -->
-    <script src="https://aframe.io/releases/1.0.0/aframe.min.js"></script>
-    <!-- Loading AR.js library for marker detection and tracking -->
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <head>
+        <!-- Loading A-Frame library for modeling AR content -->
+        <script src="https://aframe.io/releases/1.0.0/aframe.min.js"></script>
+        <!-- Loading AR.js library for marker detection and tracking -->
+        <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    </head>
     <body style="margin : 0px; overflow: hidden;">
         <a-scene embedded arjs>
             <!-- Defining marker type: Hiro marker -->
