--- a/cat-markerless/index.html
+++ b/cat-markerless/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <!-- Loading Model-Viewer library -->
-    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-</head>
-<body style="margin : 0px; overflow: hidden;">
-    <model-viewer 
-    </model-viewer>
-</body>
+    <head>
+        <!-- Loading Model-Viewer library -->
+        <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+    </head>
+    <body>
+        <model-viewer 
+            scr="https://kristenphan.github.io/assets/models/cat/cat.glb" 
+            camera-controls
+            auto-rotate
+            ar
+            ios-src="https://kristenphan.github.io/assets/models/cat/cat.usdz"
+        </model-viewer>
+    </body>
 </html>
