--- a/cat-markerless/index.html
+++ b/cat-markerless/index.html
@@ -5,6 +5,11 @@
         <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
     </head>
     <body>
+        <!-- 
+            Use Model-Viewer to detect a planar surface 
+            and superimpose a 3D cat model in .glb and .usdz format on it. 
+            Rendering on iOS device requires .usdz
+        -->
         <model-viewer 
             scr="https://kristenphan.github.io/assets/models/cat/cat.glb" 
             camera-controls
