--- a/test/index.html
+++ b/test/index.html
@@ -1,47 +1,21 @@
 <!DOCTYPE html>
 <html>
-<script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-<!-- we import arjs version without NFT but with marker + location based support -->
-<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-<!--aframe-extra for a-frame animation-mixer-->
-<script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
-<!--aframe-look-at-component to tell an entity to face towards another entity or position-->
-<script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
-<body style="margin : 0px; overflow: hidden;">
-    <a-scene embedded arjs>
-        <a-marker preset="hiro">
-            <!--<a-plane color="#a100fe" height="0.5" width="0.5" position="0 1 0"></a-plane>-->
-            <!--<a-entity 
-                geometry="primitive: plane"
-                material="color: #a100fe"
-                height="0.5"
-                width="0.5"
-                position="0 1 0"
-                look-at="[camera]">
-            </a-entity>-->
-            <a-entity
-                position="0 2 0"
-                geometry="primitive: plane; width: 8; height: auto"
-                material="color: gold"
-                text=
-                    "color: black; 
-                    align: center; 
-                    font: https://cdn.aframe.io/fonts/DejaVu-sdf.fnt;
-                    value: a-plane align:center (anchor:align) DejaVu width 8 1234567890123456789012345678901234567890">
-            </a-entity>
-            <a-entity
-                position="0 5 -4"
-                text=
-                    "color: white; 
-                    align: center; 
-                    width: 5; 
-                    font: kelsonsans;
-                    value: align='center' (default anchor) KelsonSans 123456789012345678901234567890123456789012345678901234567890">
-            </a-entity>
-        </a-marker>
-        <a-entity camera></a-entity>
-    </a-scene>
-</body>
+    <head>
+        <!-- Loading Model-Viewer library -->
+        <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+    </head>
+    <body>
+        <!-- 
+            Use Model-Viewer to detect a planar surface 
+            and superimpose a 3D cat model in .glb and .usdz format on it. 
+            Rendering on iOS device requires .usdz
+        -->
+        <model-viewer 
+            scr="https://kristenphan.github.io/ar/assets/models/trump/scene.gltf" 
+            camera-controls
+            auto-rotate
+            ar
+            ios-src="https://kristenphan.github.io/assets/models/cat/cat.usdz"
+        </model-viewer>
+    </body>
 </html>
-<!--acn purple: "#a100fe" or "gold"-->
-<!-- https://github.com/kristenphan/ar/blob/main/test/index.html -->
