--- a/test/index.html
+++ b/test/index.html
@@ -1,35 +1,15 @@
-<!DOCTYPE html>
-<html>
 <head>
-    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-    <!-- we import arjs version without NFT but with marker + location based support -->
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-    <!--aframe-extra for a-frame animation-mixer-->
-    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
+  <title>My A-Frame Scene</title>
+  <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
 </head>
-<body style="margin : 0px; overflow: hidden;">
-    <a-scene embedded arjs>
-        <a-marker preset="hiro">
-            <!--gltf model url with the same domain to avoid CORS issue-->
-            <a-entity position="0 0 0"
-                      scale="0.6 0.6 0.6"
-                      gltf-model="https://kristenphan.github.io/ar/assets/models/trump/scene.gltf" 
-                      animation-mixer>
-            </a-entity>
-            <a-entity
-                position="0 2.1 0"
-                text=
-                    "color: gold; 
-                    align: center; 
-                    width: 3; 
-                    font: exo2semibold;
-                    value: !Make LS Run Great Again!"
-                look-at="[camera]">
-            </a-entity>
-        </a-marker>
-        <a-entity camera></a-entity>
-    </a-scene>
+
+<body>
+  <a-scene>
+    <a-text 
+       value="hello"
+       font="https://kristenphan.github.io/ar/assets/fonts/oredo-regular-msdf/Oredo-Regular-msdf.json"
+       color="#33C3F0"
+       negate="false">
+    </a-text>
+  </a-scene>
 </body>
-</html>
-
-
