--- a/test/index.html
+++ b/test/index.html
@@ -24,7 +24,8 @@
                 font="https://kristenphan.github.io/ar/assets/fonts/oredo-regular-msdf/oredo-regular-msdf.json"
                 color="black"
                 negate="false"
-                position="0 2.1 0">
+                position="0 2.3 0"
+                scale="0.25 0.25 0.25">
             </a-text>
             <!-- Adding body text with look-at-->
             <a-entity
