resized header text

--- a/test/index.html
+++ b/test/index.html
@@ -24,8 +24,9 @@
                 font="https://kristenphan.github.io/ar/assets/fonts/oredo-regular-msdf/oredo-regular-msdf.json"
                 color="black"
                 negate="false"
-                position="0 2.3 0"
-                scale="0.25 0.25 0.25">
+                position="0 2.4 0"
+                scale="0.15 0.15 0.15"
+                align="center">
             </a-text>
             <!-- Adding body text with look-at-->
             <a-entity
