--- a/test/index.html
+++ b/test/index.html
@@ -25,8 +25,7 @@
                 color="black"
                 negate="false"
                 position="0 2.4 0"
-                scale="0.15 0.15 0.15"
-                align="center">
+                scale="0.15 0.15 0.15">
             </a-text>
             <!-- Adding body text with look-at-->
             <a-entity
