added animation to header a-entity text

--- a/test/index.html
+++ b/test/index.html
@@ -20,7 +20,8 @@
             </a-entity>
             <!-- Adding header text with custom msdf font with look-at -->
             <a-entity
-                position="0 2.1 0"
+                position="0 2.2 0"
+                animation="property: scale; to: 5 5 5; dir: alternate; loop: false"
                 text=
                     "color: black; 
                     align: center; 
