--- a/test/index.html
+++ b/test/index.html
@@ -21,7 +21,7 @@
             <!-- Adding header text with custom msdf font with look-at -->
             <a-entity
                 position="0 2.2 0"
-                animation="property: scale; to: 5 5 5; dir: alternate; loop: false"
+                animation="property: scale; to: 1.5 1.5 1.5; dir: alternate; loop: true"
                 text=
                     "color: black; 
                     align: center; 
