--- a/make-lsrun-great-again/index.html
+++ b/make-lsrun-great-again/index.html
@@ -12,22 +12,24 @@
 <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
         <a-marker preset="hiro">
-            <!--gltf model url with the same domain to avoid CORS issue-->
+            <!--Adding .gltf 3D model with animation and url with same domain to avoid CORS issue-->
             <a-entity position="0 0 0"
                       scale="0.6 0.6 0.6"
                       gltf-model="https://kristenphan.github.io/ar/assets/models/trump/scene.gltf" 
                       animation-mixer>
             </a-entity>
+            <!-- Adding header text with custom msdf font with look-at -->
             <a-entity
-                position="0 2.1 0"
+                position="0 2.2 0"
                 text=
-                    "color: gold; 
+                    "color: black; 
                     align: center; 
                     width: 3; 
-                    font: exo2semibold;
+                    font: https://kristenphan.github.io/ar/assets/fonts/oredo-regular-msdf/oredo-regular-msdf.json;
                     value: !Make LS Run Great Again!"
                 look-at="[camera]">
             </a-entity>
+            <!-- Adding body text with look-at-->
             <a-entity
                 position="0 1.8 0"
                 text=
@@ -43,6 +45,3 @@
     </a-scene>
 </body>
 </html>
-<!-- acn purple = "#a100fe" or "gold"-->
-<!-- https://github.com/kristenphan/ar/blob/main/make-lsrun-great-again/index.html -->
-<!-- https://kristenphan.github.io/ar/assets/fonts/oredo-regular-msdf/Oredo-Regular-msdf.json -->
