updated body text font + color

--- a/test/index.html
+++ b/test/index.html
@@ -33,10 +33,10 @@
             <a-entity
                 position="0 1.8 0"
                 text=
-                    "color: gold; 
+                    "color: black; 
                     align: center; 
                     width: 2; 
-                    font: kelsonsans;
+                    font: exo2semibold;
                     value: What: Weekly 4 km runs\nWhen: Fridays @ 12 PM \nWhere: Edge office"
                 look-at="[camera]">
             </a-entity>
