--- a/test/index.html
+++ b/test/index.html
@@ -3,16 +3,17 @@
 <head>
   <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
   <script src="https://supereggbert.github.io/aframe-htmlembed-component/dist/build.js"></script>
-  <script src="scripts.js"></script>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <a-scene>    
-    <a-entity id="menu" class="screen menu dark" htmlembed="ppu:256" position="-2.712 2 -4.476" rotation="0 0 0" scale="5 5 5">
+    <a-entity id="menu" class="screen menu dark" htmlembed position="-2.712 2 -4.476" rotation="0 0 0" scale="5 5 5">
+      <!-- hardcoding img src -->
       <img src="http://openweathermap.org/img/wn/03d@2x.png" alt="image">
 		  <div id="location">Unable to Fetch Weather</div>
       <div id="tempC">No Temp Info.</div>
     </a-entity>
   </a-scene>
+  <script src="scripts.js"></script>
 </body>
 </html>
