--- a/test/index.html
+++ b/test/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <a-scene>    
-    <a-entity id="menu" class="screen menu dark" htmlembed position="-2.712 2 -4.476" rotation="0 0 0" scale="5 5 5">
+    <a-entity id="menu" class="screen menu dark" htmlembed="ppu: 256" position="-2.712 2 -4.476" rotation="0 0 0" scale="5 5 5">
       <!-- hardcoding img src -->
       <img src="http://openweathermap.org/img/wn/03d@2x.png" alt="image">
 		  <div id="location">Unable to Fetch Weather</div>
