--- a/test/index.html
+++ b/test/index.html
@@ -1,19 +1,60 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-  <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-  <script src="https://supereggbert.github.io/aframe-htmlembed-component/dist/build.js"></script>
-  <link rel="stylesheet" href="styles.css" />
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <!-- importing arjs version without NFT but with marker + location based support -->
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <!-- importing aframe-extra for a-frame animation-mixer-->
+    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
+    <!-- importing aframe-look-at-component to tell an entity to face towards another entity or position-->
+    <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
+    <!-- importing html-embed-component to add html elements to a-scene -->
+    <script src="https://supereggbert.github.io/aframe-htmlembed-component/dist/build.js"></script>
+    <link rel="stylesheet" href="styles.css" />
 </head>
-<body>
-  <a-scene>    
-    <a-entity id="menu" class="screen menu dark" htmlembed="ppu: 256" position="-2.712 2 -4.476" rotation="0 0 0" scale="5 5 5">
-      <!-- hardcoding img src -->
-      <img src="http://openweathermap.org/img/wn/03d@2x.png" alt="image">
-		  <div id="location">Unable to Fetch Weather</div>
-      <div id="tempC">No Temp Info.</div>
-    </a-entity>
-  </a-scene>
-  <script src="scripts.js"></script>
+<body style="margin : 0px; overflow: hidden;">
+    <a-scene embedded arjs>
+        <a-marker preset="hiro">
+            <!--adding .gltf 3D model with animation and url with same domain to avoid CORS issue-->
+            <a-entity position="0 0 0"
+                      scale="0.6 0.6 0.6"
+                      gltf-model="https://kristenphan.github.io/ar/assets/models/trump/scene.gltf" 
+                      animation-mixer>
+            </a-entity>
+            <!-- adding header text with custom msdf font with look-at -->
+            <a-entity
+                position="0 2.2 0"
+                text=
+                    "color: black; 
+                    align: center; 
+                    width: 3; 
+                    font: https://kristenphan.github.io/ar/assets/fonts/oredo-regular-msdf/oredo-regular-msdf.json;
+                    value: !Make LS Run Great Again!"
+                look-at="[camera]">
+            </a-entity>
+            <!-- adding body text with look-at-->
+            <a-entity
+                position="0 1.8 0"
+                text=
+                    "color: black; 
+                    align: center; 
+                    width: 2; 
+                    font: exo2semibold;
+                    value: What: Weekly 4 km runs\nWhen: Fridays @ 12 PM \nWhere: Edge office"
+                look-at="[camera]">
+            </a-entity>
+            <!-- adding temperature block using open weather api -->
+            <a-entity id="menu" class="screen menu dark" htmlembed="ppu: 256" position="0 3 0" rotation="0 0 0" scale="1 1 1">
+                <!-- hardcoding img src -->
+                <img src="http://openweathermap.org/img/wn/03d@2x.png" alt="image">
+		        <!-- displaying location -->
+                <div id="location">Unable to Fetch Weather</div>
+                <!-- displaying celcius temp -->
+                <div id="tempC">No Temp Info.</div>
+            </a-entity>
+        </a-marker>
+        <a-entity camera></a-entity>
+    </a-scene>
+     <script src="scripts.js"></script>
 </body>
 </html>
