update weather text

--- a/test/index.html
+++ b/test/index.html
@@ -48,9 +48,9 @@
                 <!-- hardcoding img src -->
                 <img src="http://openweathermap.org/img/wn/03d@2x.png" alt="image">
 		        <!-- displaying location -->
-                <div id="location">Unable to Fetch Weather</div>
+                <div id="location"> N/A </div>
                 <!-- displaying celcius temp -->
-                <div id="tempC">No Temp Info.</div>
+                <div id="tempC"> N/A </div>
             </a-entity>
         </a-marker>
         <a-entity camera></a-entity>
