--- a/test/index.html
+++ b/test/index.html
@@ -29,7 +29,7 @@
                     align: center; 
                     width: 3; 
                     font: https://kristenphan.github.io/ar/assets/fonts/oredo-regular-msdf/oredo-regular-msdf.json;
-                    value: !Make LS Run Great Again!"
+                    value: !Make Ls Run Great Again!"
                 look-at="[camera]">
             </a-entity>
             <!-- adding body text with look-at-->
@@ -44,7 +44,7 @@
                 look-at="[camera]">
             </a-entity>
             <!-- adding temperature block using open weather api -->
-            <a-entity id="menu" class="screen menu dark" htmlembed="ppu: 256" position="0 3 0" rotation="0 0 0" scale="3 3 3">
+            <a-entity id="menu" class="screen menu dark" htmlembed="ppu: 256" position="0 3 0" rotation="0 2.5 0" scale="2 2 2">
                 <!-- hardcoding img src -->
                 <img src="http://openweathermap.org/img/wn/03d@2x.png" alt="image">
 		        <!-- displaying location -->
