--- a/test/index.html
+++ b/test/index.html
@@ -16,11 +16,11 @@
     <a-scene embedded arjs>
         <a-marker preset="hiro">
             <!--adding .gltf 3D model with animation and url with same domain to avoid CORS issue-->
-            <a-entity position="0 0 0"
+            <!--<a-entity position="0 0 0"
                       scale="0.6 0.6 0.6"
                       gltf-model="https://kristenphan.github.io/ar/assets/models/trump/scene.gltf" 
                       animation-mixer>
-            </a-entity>
+            </a-entity> -->
             <!-- adding header text with custom msdf font with look-at -->
             <a-entity
                 position="0 2.4 0"
@@ -44,7 +44,7 @@
                 look-at="[camera]">
             </a-entity>
             <!-- adding temperature block using open weather api -->
-            <a-entity id="menu" class="screen menu dark" htmlembed="ppu: 256" position="0 3 0" rotation="0 2.5 0" scale="2 2 2">
+            <a-entity id="menu" class="screen menu dark" htmlembed="ppu: 256" position="0 0 0" rotation="0 2.5 0" scale="5 5 5">
                 <!-- hardcoding img src -->
                 <img src="http://openweathermap.org/img/wn/03d@2x.png" alt="image">
 		        <!-- displaying location -->
