--- a/test/index.html
+++ b/test/index.html
@@ -44,7 +44,7 @@
                 look-at="[camera]">
             </a-entity>
             <!-- adding temperature block using open weather api -->
-            <a-entity id="menu" class="screen menu dark" htmlembed="ppu: 256" position="0 0 0" rotation="0 2.5 0" scale="5 5 5">
+            <a-entity id="menu" class="screen menu dark" htmlembed="ppu: 256" position="0 0 0" rotation="0 0 0" scale="1 1 1" look-at="[camera]">
                 <!-- hardcoding img src -->
                 <img src="http://openweathermap.org/img/wn/03d@2x.png" alt="image">
 		        <!-- displaying location -->
@@ -55,6 +55,6 @@
         </a-marker>
         <a-entity camera></a-entity>
     </a-scene>
-     <script src="scripts.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
