--- a/test2/index.html
+++ b/test2/index.html
@@ -4,6 +4,6 @@
 	<link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-	<h1 class="test"> before </h1>
+	<h1 id="test"> before </h1>
 	<script src="scripts.js"></script>
 </body>
