--- a/test2/index.html
+++ b/test2/index.html
@@ -17,11 +17,11 @@
     <a-scene embedded arjs>
         <a-marker preset="hiro">
             <!-- adding temperature panel using open weather api and look-at-->
-            <a-entity class="panel" htmlembed="ppu: 256" position="-2 1.5 0" rotation="0 0 0" scale="1 1 1" look-at="[camera]">
+            <a-entity class="panel" htmlembed="ppu: 256" position="0 2.5 0" rotation="0 0 0" scale="1 1 1" look-at="[camera]">
                 <!-- displaying location -->
-                <div id="location"> N/A </div>
+                <div id="location"> N/A not blue </div>
                 <!-- displaying celcius temp -->
-                <div id="tempC"> N/A </div>
+                <div id="tempC"> N/A not blue </div>
             </a-entity>
     </a-scene>
 	<script src="scripts.js"></script>
