--- a/test2/index.html
+++ b/test2/index.html
@@ -19,10 +19,10 @@
             <!-- adding temperature panel using open weather api and look-at-->
             <a-entity class="panel" htmlembed="ppu: 256" position="0 2.5 0" rotation="0 0 0" scale="1 1 1" look-at="[camera]">
                 <!-- displaying location -->
-                <div id="location"> N/A not blue </div>
+                <div id="location"> N/A blue? </div>
                 <!-- displaying celcius temp -->
-                <div id="tempC"> N/A not blue </div>
+                <div id="tempC"> N/A blue? </div>
             </a-entity>
     </a-scene>
-	<script src="scripts.js"></script>
+	<!-- <script src="scripts.js"></script> -->
 </body>
